# django-cli

./: README.md  pyproject.toml
django_manage/: cli.py  core.py
tests/: test_django_manage.py
