[tool.poetry]
name = "django-manage"
version = "0.1.0"
description = "'django-manage' is a new tool to manage the django application on the command line."
authors = ["Fatih Sarhan <f9n@protonmail.com>"]
license = "GPL-3.0"
readme = "README.md"
homepage = "https://github.com/f9n/django-manage"
repository = "https://github.com/f9n/django-manage"
documentation = "https://github.com/f9n/django-manage"

classifiers = [
  "Topic :: Utilities",
  "Framework :: Django",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
]

[tool.poetry.dependencies]
python = "^3.5"
kangaroo = "^0.1.0"
click = "^7.0"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
black = { version = "^18.9b0", python = "^3.6" }

[tool.poetry.scripts]
django-manage = "django_manage.cli:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
